--- a/package.json
+++ b/package.json
@@ -7,11 +7,21 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "dependencies": {
+    "@mdi/font": "^7.4.47",
     "nuxt": "^3.15.4",
     "vue": "latest",
     "vue-router": "latest"
+  },
+  "devDependencies": {
+    "@nuxt/eslint": "^1.0.1",
+    "eslint": "^9.20.0",
+    "typescript": "^5.7.3",
+    "vite-plugin-vuetify": "^2.1.0",
+    "vuetify": "^3.7.11"
   }
 }
