firebase authの設定を追加しました

--- a/package.json
+++ b/package.json
@@ -12,10 +12,16 @@
     "lint:fix": "eslint . --fix"
   },
   "dependencies": {
+    "@firebase/app-types": "^0.9.3",
     "@mdi/font": "^7.4.47",
+    "firebase": "^11.3.1",
+    "firebase-admin": "^13.1.0",
+    "firebase-functions": "^6.3.2",
     "nuxt": "^3.15.4",
+    "nuxt-vuefire": "^1.0.5",
     "vue": "latest",
-    "vue-router": "latest"
+    "vue-router": "latest",
+    "vuefire": "^3.2.1"
   },
   "devDependencies": {
     "@nuxt/eslint": "^1.0.1",
